# agentsleague

./: README.md
alex-szarka/: .env.example  .gitignore  Dockerfile  README.md  _NotesToSelf.txt  agent.yaml  main.py  pyproject.toml  resp1.json  resp2.json  test_hitl.json  test_initial.json
alex-szarka-yaml/: assessment-gate.yaml  dispatcher.yaml  engagement-agent.yaml  exam-planner.yaml  learning-path-curator.yaml  readiness-assessment.yaml  study-plan-generator.yaml
alex-szarka/agents/: __init__.py  assessment_gate.py  dispatcher.py  engagement_agent.py  exam_planner.py  foundry_agent_executor.py  learning_path_curator.py  readiness_assessment.py  readiness_router.py  study_plan_generator.py
y_newer_previous_attempt/: Dockerfile  agent.yaml  pyproject.toml
y_newer_previous_attempt/agents/: __init__.py  assessment_gate.py  dispatcher.py  engagement_agent.py  exam_planner.py  foundry_helpers.py  learning_path_curator.py  main.py  readiness_assessment.py  study_plan_generator.py
y_previous_attempts/: Dockerfile  _NotesToSelf.txt  __NewNotes.txt  main.py  y_old_requirements.OLD.txt
y_previous_attempts/agents/agents/: __init__.py  assessment_gate.py  dispatcher.py  engagement_agent.py  exam_planner.py  learning_path_curator.py  readiness_assessment_agent.py  study_plan_generator.py
y_previous_attempts/markdown/: 20260225-1947.md
